[gd_scene load_steps=6 format=2]

[ext_resource path="res://weapons/WeaponHitbox.gd" type="Script" id=1]
[ext_resource path="res://weapons/Weapon.gd" type="Script" id=2]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="Animation" id=2]
resource_name = "attack"

[sub_resource type="Animation" id=3]
resource_name = "strong_attack"

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D"]
material = SubResource( 1 )
position = Vector2( 6, -11 )
rotation = -1.5708
offset = Vector2( 0, -12 )

[node name="Hitbox" type="Area2D" parent="Node2D/AnimatedSprite"]
collision_layer = 0
collision_mask = 12
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/AnimatedSprite/Hitbox"]
position = Vector2( 2.95639e-05, -8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/strong_attack = SubResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Node2D/AnimatedSprite/Hitbox" to="Node2D/AnimatedSprite/Hitbox" method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
